# Frontier-quant

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
src/frontier/: __init__.py  exceptions.py
src/frontier/api/: main.py
src/frontier/core/: optimizer.py
src/frontier/models/: schemas.py
src/frontier_api/: __init__.py  py.typed
src/frontier_api/adapters/: yfinance_client.py
src/frontier_api/core/: optimizer.py
tests/: conftest.py  test_adapters.py  test_api.py  test_exceptions.py  test_full_workflow.py  test_optimizer.py
