[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "frontier-api"
version = "0.1.0"
description = "Stateless, high-performance Mean-Variance portfolio optimization engine."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Pratham Mishra", email = "prathammishra1729@gmail.com" }
]
dependencies = [
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "yfinance>=0.2.28",
    "pandas>=2.0.0"
]

[project.optional-dependencies]
# Run the FastAPI web server: pip install frontier-api[server]
server = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]
# Development tools: pip install frontier-api[dev]
dev = [
    "pytest",
    "httpx",
]
# Everything at once: pip install frontier-api[all]
all = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pytest",
    "httpx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "network: marks tests that require a live internet connection (Yahoo Finance)",
]